# Talos-V1

./: .gitignore  CMakeLists.txt  collision_meshes  nexto_design_doc.md  talos_phase1_plan.md
Kaggle/: TRAINING_PLAN.md  package_dataset.sh  run_talos.ipynb
collision_meshes/: desktop.ini
replays/: 071deb63-2557-487d-9bb8-dd627132af88.replay  08d622e7-923d-437d-acff-d2243178f233.replay  0a70e16d-717e-4226-9780-60fb4e670e8b.replay  0e007ebe-8043-485e-808a-7783027a3c25.replay  0e72e58a-3868-4a62-99e6-b6921ce90755.replay  0f02b4d7-ffe1-481f-8a68-82c4d687d77d.replay  154fdb70-8458-425e-b099-d2e9bb24506e.replay  183e28ad-76f7-411b-bf09-25808d467c4d.replay  1fabde49-d344-42ec-9883-44a846a6a483.replay  2019-10-31.19.29 Lolli Ranked Solo Standard Win.replay  29244cda-3489-46bb-bb02-b805b1b36234.replay  2b51d200-7cfe-4d73-b10f-639e07c34481.replay  2ea182f7-a586-4d06-a6a6-a26b10daf8a2.replay  310a2a5c-57e4-4971-a637-3b88c8801cc6.replay  3a012e8d-d69d-426a-8608-48c24975d69b.replay  3ba6c3fb-341f-4a7c-a429-aaa05acd5783.replay  42908711-178c-4f94-9b6b-8606e4db29ca.replay  442DF1D84535608887A14C91A930FD50 (1).replay  491fb6f9-63b1-407d-91f1-73efb5bb15ca.replay  4f91186f-a692-4295-9131-823fff157434.replay  509f15b7-5243-476d-9200-d00a6afd9e92.replay  51F2655649350C49719446A9F18F04BC.replay  52a6a72f-0f74-4957-af88-c33125c1cd99.replay  57af03fa-d22d-4df7-ae86-155525b14e08.replay  59f648ee-dcf6-4c44-8c6c-e908d95210dd.replay  5DA6432548C541968C828C9EFFB1EE3E.replay  5b9e3cbf-e922-4189-8362-4b6a26d56e32.replay  5ce046e0-50e6-4901-bb5d-bafafb46c847.replay  5eb57a9e-1986-471a-bc98-d07c6c2a8a41.replay  5f31b943-b63c-467e-82d3-2b9bbd7644ba.replay  642d2974-8e0b-40d8-a32c-0b547904465e.replay  64ad9620-bd6a-4e7b-a8e6-cc08097f5342.replay  7350b185-24ef-4641-868a-ed7247bf13e3.replay  73731669-38aa-4a17-9d29-4913c47685cc.replay  76adf9ff-5003-47f5-9c1b-7804046ead04.replay  777b54ee-8ec6-4d4c-b736-6653c84a5e85.replay  79428748-dcd1-43d1-99a4-7f62a587e61c.replay  799583d2-2294-4c62-8e70-f06f37cdd754.replay  862ef947-6511-4255-9513-9d36737def1a.replay  86a14c46-16ed-4352-8e0f-4633fbcc39cf.replay  (+49 more)
scripts/: build.py  parse_replays.py  setup_kaggle.sh
src/: PhaseManager.cpp  PhaseManager.h  TalosOBS.cpp  TalosOBS.h  TalosRewards.cpp  TalosRewards.h  TalosStarter.cpp  TalosStateSetter.cpp  TalosStateSetter.h  main.cpp
